Use elm-webpack-loader

--- a/Test/index.html
+++ b/Test/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <script src="../bundle.js"></script>
-</head>
 <body>
     <div id="elm"></div>
-    <script>
-        var elmNode = document.getElementById('elm');
-        var app = Elm.Test.App.embed(elmNode);
-    </script>
+    <script src="../build/index.js"></script>
 </body>
 </html>
