--- a/Test/Browser/index.html
+++ b/Test/Browser/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
     <div id="elm"></div>
-    <script src="../build/index.js"></script>
+    <script src="../../build/index.js"></script>
 </body>
 </html>
